--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "doctrine/dbal": "^2.5",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
@@ -22,7 +23,10 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "files" : ["app/Helpers/Helper.php"]
+        "files" : ["app/Helpers/Helper.php",
+                    "app/Helpers/Helper2.php",
+                    "app/Helpers/metaGetSet.php"
+                  ]
 
     },
     "autoload-dev": {
